--- a/test.ipynb
+++ b/test.ipynb
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "id": "4bf7b6b3",
    "metadata": {},
    "outputs": [
@@ -528,13 +528,317 @@
     }
    ],
    "source": [
+    "\n",
     "0 ^ 7"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d7c9905e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def contains_duplicate(nums):\n",
+    "    \n",
+    "    nums.sort()\n",
+    "    for i in range(1,len(nums)):\n",
+    "        if nums[i-1] == nums[i]:\n",
+    "            \n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
+    "nums = [1,2,3,4,2,5]\n",
+    "print(contains_duplicate(nums))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "id": "2285f06a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 1, 5, 4, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def rotate(nums, k):\n",
+    "        n = len(nums)\n",
+    "        k = k%n\n",
+    "               \n",
+    "        i, j = 0, k-1\n",
+    "        while i<=j:\n",
+    "            nums[i], nums[j] = nums[j], nums[i]\n",
+    "            i += 1\n",
+    "            j -= 1\n",
+    "        \n",
+    "        i, j = k, len(nums)-1\n",
+    "        while i<=j:\n",
+    "            nums[i], nums[j] = nums[j], nums[i]\n",
+    "            i += 1\n",
+    "            j -= 1\n",
+    "        print(nums)\n",
+    "        \n",
+    "nums = [1,2,3,4,5]\n",
+    "k = 2\n",
+    "rotate(nums, k)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "b60dece9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2]\n",
+      "[3, 4, 5]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[3, 4, 1, 2]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [1,2,3,4,5]\n",
+    "k = 2\n",
+    "\n",
+    "print(nums[:k])\n",
+    "print(nums[k:])\n",
+    "nums[:k],nums[k:] = nums[k:], nums[:k]\n",
+    "nums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "4503030a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 4, 1, 2]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums[:k] + nums[k:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "1db8a89c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    *\n",
+      "   * *\n",
+      "  *   *\n",
+      " *     *\n",
+      "*********\n"
+     ]
+    }
+   ],
+   "source": [
+    "def pattern(n):\n",
+    "    \n",
+    "    cur = 1\n",
+    "    for i in range(n):\n",
+    "        for j in range(n-i-1,0,-1):\n",
+    "            print(\" \",end=\"\")\n",
+    "        if i != n-1:\n",
+    "            s = 1\n",
+    "            while s <= cur:\n",
+    "                if s == 1 or s == cur:\n",
+    "                    print(\"*\",end=\"\")\n",
+    "                else:\n",
+    "                    print(\" \",end=\"\")\n",
+    "                s+=1\n",
+    "            cur = cur+2\n",
+    "        else:\n",
+    "            for j in range(cur):\n",
+    "                print(\"*\",end=\"\")\n",
+    "        print()\n",
+    "            \n",
+    "\n",
+    "pattern(5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "ffea2693",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   *\n",
+      "  * *\n",
+      " *   *\n",
+      "*******\n"
+     ]
+    }
+   ],
+   "source": [
+    "def pattern(n):\n",
+    "    \n",
+    "    for i in range(1,n+1):\n",
+    "        for j in range(1,n-i+1):\n",
+    "            print(\" \",end=\"\")\n",
+    "            \n",
+    "        for k in range(1, i*2):\n",
+    "            if i==1 or i==n or k==1 or k==i*2-1:\n",
+    "                print(\"*\",end=\"\")\n",
+    "            else:\n",
+    "                print(\" \",end=\"\")\n",
+    "        print()\n",
+    "            \n",
+    "\n",
+    "pattern(4)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "de5bb7eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 -> 1\n",
+      "1 1 -> 0\n",
+      "0 2 -> 2\n",
+      "2 2 -> 0\n",
+      "0 3 -> 3\n",
+      "3 4 -> 7\n",
+      "7 4 -> 3\n",
+      "3 5 -> 6\n",
+      "6 5 -> 3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def missing_elements(arr):\n",
+    "        res = 0\n",
+    "        for num in arr:\n",
+    "            print(res, num, \"->\", res^num)\n",
+    "            res ^= num\n",
+    "        return res\n",
+    "\n",
+    "arr = [ 1, 1, 2, 2, 3, 4, 4, 5, 5]\n",
+    "missing_elements(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "33cb8432",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "**\n",
+      "***\n",
+      "****\n",
+      "*****\n",
+      "*****\n",
+      "****\n",
+      "***\n",
+      "**\n",
+      "*\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_pattern():\n",
+    "    \"\"\" Function to print the pattern \"\"\"\n",
+    "    \n",
+    "    for i in range(1,6):\n",
+    "        print(\"*\"*i)\n",
+    "    for i in range(5,-1,-1):\n",
+    "        print(\"*\"*i)\n",
+    "        \n",
+    "print_pattern()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "709dce6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3 // 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1f45e26",
    "metadata": {},
    "outputs": [],
    "source": []
